--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-router/dev": "^7.4.0",
+    "@react-router/fs-routes": "^7.4.0",
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
     "@supabase/ssr": "^0.5.2",
@@ -23,12 +25,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
-    "react-router": "^7.1.5",
+    "react-router": "^7.4.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.1.5",
     "@tailwindcss/vite": "^4.0.0",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
